@@ -1,3 +1,9 @@
+2007-02-28 Yen-Ju Chen <yjchenx at gmail>
+
+	* Use NSWorkspace to track GNUstep applications
+          and Azalea to track XWindow windows.
+          Hope to make it more simple and stable.
+
 2006-12-17 Yen-Ju Chen <yjchenx at gmail>
 
 	* Initial support for keeping application in dock.
